--- a/comp2068-lab3/views/layout.pug
+++ b/comp2068-lab3/views/layout.pug
@@ -2,6 +2,16 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/main.css')
-  body
-    block content
+    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css')
+    body.p-3
+    a(href='jakob')
+      |Jakob | 
+    a(href='mother')
+      |Mother | 
+    a(href='father')
+      |Father | 
+    a(href='sister')
+      |Sister
+
+block content
+
